# ML_Infrastructure

./: CMakeLists.txt  README.md  create_training_and_test_dataset.cpp  csv_validator.cpp  min_max_scaler.cpp  ndarray.cpp  random_csv_generator.cpp  test_to_double.cpp  test_trim.cpp  utils.cpp  utils.h
